# nautilus-imaging-extension

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt-back  CMakeListsExecutable.txt  config.h.cmake
data/: nim-main.ui  nim-resize.ui
src/: main.c  nimconfig.c  nimconfig.h  nimdialog.c  nimdialog.h  nimextension.c  nimextension.h  nimfontchooser.c  nimfontchooser.h  nimimaging.c  nimimaging.h  nimmain.h  nimmaindialog.c  nimmaindialog.h  nimresizedialog.c  nimresizedialog.h  nimutils.c  nimutils.h
test/: CMakeLists.txt  nimimaging.c  test-maindialog.c  testtext.c
ui/: common.ui
